tests/neg/union-type.stk
type Option = <None, Some Int>
type Sum = <Left Int, Right Int>
type Bot = < >

val a: Sum = #Left true of Sum     // error
val b: Option = #None of Sum       // error
val c: Option = #Some 5 of Option

match c                             // error
  case #None => 0 p

match c
  case _     => 1 p
  case #None => 0 p                 // error

match c                             // error
  case #Some n => n p
  case #Some n => n p               // error

10 p
